fix: adjust grid items gap in `main` container
The gap is adjusted to prevent overlapping of grid items in main
container.

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ main {
     flex: 1;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
+    gap: 10%;
     justify-items: center;
 }
 
